--- a/css/styles.css
+++ b/css/styles.css
@@ -65,4 +65,16 @@ body {
 
 .form-label {
   font-weight: bold;
+}
+
+.quantity-button {
+  background-color: #fffdff;
+  padding: 4px 6px;
+  border: 1px solid #1e153c;
+  cursor: pointer;
+}
+.quantity-button:hover {
+  background-color: white;
+  color: #e24055;
+  box-shadow: inset 0 0 0 2px #e24055;
 }/*# sourceMappingURL=styles.css.map */
