--- a/css/styles.scss
+++ b/css/styles.scss
@@ -86,7 +86,19 @@ body {
   font-weight: bold;
 }
 
-.quantity-button{
+.remove-button{
+  background-color: $base-color;
+  padding: 4px 8px;
+  border: 1px solid #1e153c;
+  cursor: pointer;
+  &:hover {
+    background-color: white;
+    color: $primary-color;
+    box-shadow: inset 0 0 0 2px $primary-color;
+  }
+}
+
+.add-button{
   background-color: $base-color;
   padding: 4px 6px;
   border: 1px solid #1e153c;
@@ -97,5 +109,3 @@ body {
     box-shadow: inset 0 0 0 2px $primary-color;
   }
 }
-
-
